--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "postinstall": "npx prisma generate",
+    "postinstall": "npx prisma generate & npx prisma db push",
     "start": "next start",
     "lint": "next lint"
   },
