--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@clerk/nextjs": "^5.2.12",
     "@hookform/resolvers": "^3.9.0",
     "@huggingface/inference": "^2.8.0",
-    "@prisma/client": "^5.17.0",
+    "@prisma/client": "^5.18.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -25,11 +25,13 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-table": "^8.19.3",
     "@uploadthing/react": "^6.7.2",
     "axios": "^1.7.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "lucide-react": "^0.424.0",
     "next": "14.2.5",
