--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-markdown": "^9.0.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "together-ai": "^0.6.0-alpha.4",
     "uploadthing": "^6.13.2",
     "zod": "^3.23.8",
     "zustand": "^4.5.4"
